message PhysicsObject {
	required uint32 	colMask = 1;
	required int32 	type 		= 2;
	required int32	shape 	= 3;
	required float	mass 		= 4;
	optional float	margin 	= 5;
	required float	radius	= 6;
	optional float	angularDamp = 7;
	optional float	linearDamp = 8;
	optional float	formFactor = 9;
	optional float	minVel	= 10;
	optional float	maxVel	= 11;
	required float	restitution = 12;
	required float  friction	= 13;
	required uint32 colGroupMask = 14;
	optional float 	charStepHeight = 15;
	optional float  charJumpSpeed = 16;
	optional float  charFallSpeed = 17;
}